--- a/templates/base/cart.html
+++ b/templates/base/cart.html
@@ -11,6 +11,7 @@
 <body>
 <!--Styles-->
 <link rel="stylesheet" href="{% static '/base/css/cart.css' %}" />
+<link href="{% static '/base/css/color-selector.css' %}" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
 <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
@@ -38,7 +39,9 @@
                         <div class="flex-grow-1 align-self-center overflow-hidden">
                             <div>
                                 <h5 class="text-truncate font-size-18"><a href="#" class="text-dark">{{ cart.product }}</a></h5>
-                                <p class="mb-0 mt-1">Color : <span class="fw-medium">Will be added</span></p>
+                                <p class="mb-0 mt-1">
+                                    Color : <span class="fw-medium color-swatch" data-color="{{ color.color }}" style="vertical-align: middle; width: 35px; height: 35px; background-color: {{cart.color}};"></span>
+                                </p>
                             </div>
                         </div>
                         <div class="flex-shrink-0 ms-2">
