--- a/templates/user/add_color.html
+++ b/templates/user/add_color.html
@@ -2,31 +2,39 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
 <section class="justify-content-center d-flex p-4">
-    <!--User update form-->
     <div class="main-w3layouts wrapper">
-      <div class="main-agileinfo">
-        {% if form.non_field_errors %}
-            <div class="errors">
-                {% for error in form.non_field_errors %}
-                    <span>{{error}}</span>
-                {% endfor %}
-            </div>
-        {% endif %}
-        <div class="agileits-top">
-            <form class="form-group" method="post" enctype="multipart/form-data">
-                {% csrf_token %} 
-                <div class="card mb-3">
-                  <div class="card-body">
-                    <li class="list-group-item">{{ form.color|as_crispy_field }}</li>
-                    <input class="btn btn-success" type="submit" value="Confirm">
-                    <a href="{% url 'user:shop' %}" class="btn btn-primary active" role="button" aria-pressed="true">Done</a>
-                  </div>
+        <div class="main-agileinfo">
+            {% if form.non_field_errors %}
+                <div class="errors">
+                    {% for error in form.non_field_errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
                 </div>
-            </form>
+            {% endif %}
+            <div class="agileits-top">
+                <div class="container mt-3">
+                    <h2>Pick colors for your product</h2>
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="color" class="form-label">Choose a color</label>
+                            <input type="color" class="form-control form-control-color" id="color" name="color" value="#CCCCCC" title="Choose a color">
+                        </div>
+                        <button type="submit" class="btn btn-success">Confirm</button>
+                        <a href="{% url 'user:shop' %}" class="btn btn-primary active" role="button" aria-pressed="true">Done</a>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-    <!--End of User update form-->
 </section>
 {% endblock %}
